--- a/treasure.html
+++ b/treasure.html
@@ -19,61 +19,153 @@
     <p>Click on the locations to find silver and gold, watch out for the rattlesnake</p>
     <p id="locations">Number of locations checked is zero</p>
     <p id="score">Score is zero</p>
-    <p>Click for help</p>
+    <p onclick="help()">Click for help</p>
     <p id="help">Help report</p>
   </div>
 
   <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-1"><img id="img1" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img2" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img3" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img4" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img5" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img6" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img7" src="cactus.jpg" height="100" width="100" ></div>
+        <div class="col-sm-1"><img id="img1" src="cactus.jpg" height="100" width="100" onclick="check(0)"></div>
+        <div class="col-sm-1"><img id="img2" src="cactus.jpg" height="100" width="100" onclick="check(1)"></div>
+        <div class="col-sm-1"><img id="img3" src="cactus.jpg" height="100" width="100" onclick="check(2)"></div>
+        <div class="col-sm-1"><img id="img4" src="cactus.jpg" height="100" width="100" onclick="check(3)"></div>
+        <div class="col-sm-1"><img id="img5" src="cactus.jpg" height="100" width="100" onclick="check(4)"></div>
+        <div class="col-sm-1"><img id="img6" src="cactus.jpg" height="100" width="100" onclick="check(5)"></div>
+        <div class="col-sm-1"><img id="img7" src="cactus.jpg" height="100" width="100" onclick="check(6)"></div>
     </div>
 
     <div class="row">
-        <div class="col-sm-1"><img id="img8" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img9" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img10" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img11" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img12" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img13" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img14" src="cactus.jpg" height="100" width="100" ></div>
+        <div class="col-sm-1"><img id="img8" src="cactus.jpg" height="100" width="100" onclick="check(7)"></div>
+        <div class="col-sm-1"><img id="img9" src="cactus.jpg" height="100" width="100" onclick="check(8)"></div>
+        <div class="col-sm-1"><img id="img10" src="cactus.jpg" height="100" width="100" onclick="check(9)"></div>
+        <div class="col-sm-1"><img id="img11" src="cactus.jpg" height="100" width="100" onclick="check(10)"></div>
+        <div class="col-sm-1"><img id="img12" src="cactus.jpg" height="100" width="100" onclick="check(11)"></div>
+        <div class="col-sm-1"><img id="img13" src="cactus.jpg" height="100" width="100" onclick="check(12)"></div>
+        <div class="col-sm-1"><img id="img14" src="cactus.jpg" height="100" width="100" onclick="check(13)"></div>
     </div>
 
     <div class="row">
-        <div class="col-sm-1"><img id="img15" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img16" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img17" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img18" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img19" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img20" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img21" src="cactus.jpg" height="100" width="100" ></div>
+        <div class="col-sm-1"><img id="img15" src="cactus.jpg" height="100" width="100" onclick="check(14)"></div>
+        <div class="col-sm-1"><img id="img16" src="cactus.jpg" height="100" width="100" onclick="check(15)"></div>
+        <div class="col-sm-1"><img id="img17" src="cactus.jpg" height="100" width="100" onclick="check(16)"></div>
+        <div class="col-sm-1"><img id="img18" src="cactus.jpg" height="100" width="100" onclick="check(17)"></div>
+        <div class="col-sm-1"><img id="img19" src="cactus.jpg" height="100" width="100" onclick="check(18)"></div>
+        <div class="col-sm-1"><img id="img20" src="cactus.jpg" height="100" width="100" onclick="check(19)"></div>
+        <div class="col-sm-1"><img id="img21" src="cactus.jpg" height="100" width="100" onclick="check(20)"></div>
     </div>
 
     <div class="row">
-        <div class="col-sm-1"><img id="img22" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img23" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img24" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img25" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img26" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img27" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img28" src="cactus.jpg" height="100" width="100" ></div>
+        <div class="col-sm-1"><img id="img22" src="cactus.jpg" height="100" width="100" onclick="check(21)"></div>
+        <div class="col-sm-1"><img id="img23" src="cactus.jpg" height="100" width="100" onclick="check(22)"></div>
+        <div class="col-sm-1"><img id="img24" src="cactus.jpg" height="100" width="100" onclick="check(23)"></div>
+        <div class="col-sm-1"><img id="img25" src="cactus.jpg" height="100" width="100" onclick="check(24)"></div>
+        <div class="col-sm-1"><img id="img26" src="cactus.jpg" height="100" width="100" onclick="check(25)"></div>
+        <div class="col-sm-1"><img id="img27" src="cactus.jpg" height="100" width="100" onclick="check(26)"></div>
+        <div class="col-sm-1"><img id="img28" src="cactus.jpg" height="100" width="100" onclick="check(27)"></div>
     </div>
 
     <div class="row">
-        <div class="col-sm-1"><img id="img29" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img30" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img31" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img32" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img33" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img34" src="cactus.jpg" height="100" width="100" ></div>
-        <div class="col-sm-1"><img id="img35" src="cactus.jpg" height="100" width="100" ></div>
+        <div class="col-sm-1"><img id="img29" src="cactus.jpg" height="100" width="100" onclick="check(28)"></div>
+        <div class="col-sm-1"><img id="img30" src="cactus.jpg" height="100" width="100" onclick="check(29)"></div>
+        <div class="col-sm-1"><img id="img31" src="cactus.jpg" height="100" width="100" onclick="check(30)"></div>
+        <div class="col-sm-1"><img id="img32" src="cactus.jpg" height="100" width="100" onclick="check(31)"></div>
+        <div class="col-sm-1"><img id="img33" src="cactus.jpg" height="100" width="100" onclick="check(32)"></div>
+        <div class="col-sm-1"><img id="img34" src="cactus.jpg" height="100" width="100" onclick="check(33)"></div>
+        <div class="col-sm-1"><img id="img35" src="cactus.jpg" height="100" width="100" onclick="check(34)"></div>
     </div>
 </div>
+
+<script>
+  var ids = ["img1", "img2", "img3", "img4", "img5", "img6", "img7", "img8", "img9", "img10", "img11", "img12", "img13", "img14", "img15", "img16", "img17", "img18", "img19", "img20", "img21", "img22", "img23", "img24", "img25", "img26", "img27", "img28", "img29", "img30", "img31", "img32", "img33", "img34", "img35"]
+  var score = 0
+  var locationsVisited = 0
+  var lastLocation = 0
+  var silverLocations = [2,5,11,21,32]
+  var goldLocation = 15
+  var snakeLocation = 20
+  var gameOver = false
+
+  function check(position) {
+      if (gameOver == true) {
+          return
+      }
+
+      locationsVisited +=1
+      document.getElementById("locations").innerHTML = "Number of locations checked is " + locationsVisited
+
+      if (position == goldLocation) {
+          document.getElementById(ids[position]).src = "gold.jpg"
+          score += 5
+          document.getElementById("score").innerHTML = "Score is " + score
+      }
+      else if (position == snakeLocation) {
+          document.getElementById(ids[position]).src = "snake.jpg"
+          gameOver = true
+          score -= 3
+          document.getElementById("score").innerHTML = "Score is " + score
+      }
+      else if (silverLocations.includes(position)) {
+          document.getElementById(ids[position]).src = "coin.jpg"
+          score += 3
+          document.getElementById("score").innerHTML = "Score is " + score
+      }
+      else {
+          document.getElementById(ids[position]).src = "pottery.jpg"
+          score += 1
+          document.getElementById("score").innerHTML = "Score is " + score
+      }
+
+      lastLocation = position
+  }
+
+  function help() {
+      let row = parseInt(lastLocation / 7)
+      let column = lastLocation % 5 
+      let snakeRow = parseInt(snakeLocation / 7)
+      let snakeCol = snakeLocation % 5
+      let top = 0
+      let left = 0
+      let right = 0
+      let bottom = 0
+
+      if (lastLocation -7 > 0) {
+        top = lastLocation-7
+      }
+      else {
+        top = lastLocation-7 + 34
+      }
+      if (lastLocation +7 < 34) {
+        bottom = lastLocation+7
+      }
+      else {
+        bottom = lastLocation+7 - 34
+      }
+      if (lastLocation -1 > 0) {
+        left = lastLocation-1
+      }
+      else {
+        left = lastLocation-1 + 34
+      }
+      if (lastLocation +1 < 34) {
+        right = lastLocation+1
+      }
+      else {
+        right = lastLocation+1 - 34
+      }
+
+      if ((Math.abs(snakeRow - row) <= 1) && (Math.abs(snakeCol - column) <= 1)) { 
+          document.getElementById("help").innerHTML = "Help report: rattle"
+      }
+      else if (silverLocations.includes(left) || silverLocations.includes(right) || silverLocations.includes(top) || silverLocations.includes(bottom)) {
+          document.getElementById("help").innerHTML = "Help report: clink"
+      }
+      else {
+          document.getElementById("help").innerHTML = "Help report: wind"
+      }
+  }
+
+</script>
+
 
 </body>
 </html>
